--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,3 +209,7 @@ form {
 	font-family:Arial, Helvetica, sans-serif;
 	
 }
+textarea {
+	color: #777777;
+	font-family:Arial, Helvetica, sans-serif
+}
