--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,12 @@ table {
 	border-spacing: 0;
 }
 
-body {
-	
+H1 {display: block;
+	font-size: 2em;
+	margin-top: 0.67em;
+	margin-left: 0;
+	margin-right: 0;
+	font-weight: bold;	
 }
 
 header {
@@ -116,7 +120,14 @@ div:not(.ports):not(.container):not(.container2):not(.bottom-left) {
 	color: #777777;
 	font-family:Arial, Helvetica, sans-serif
 }
-img {
+img:not(#portpic) {
+	float:left;
+	height: 90%;
+	width: 90%;
+	margin-right: 20px
+}
+
+#portpic {
 	float:left;
 	height: 225px;
 	width: 150px;
@@ -126,7 +137,8 @@ img {
 	padding-top: 20px;
     padding-right: 20px;
     padding-bottom: 0px;
-    padding-left: 20px;
+	padding-left: 20px;
+	margin-top:21.44px;
 }
 #b {
 	padding-top: 00px;
@@ -164,14 +176,14 @@ footer {
     bottom: 70px;
 	left: 10px;
 	background-color:teal;
-	width: 150px;
+	width: 86.1%;
 	padding-top:10px;
 	padding-bottom:10px;
 	color:white
 }
 .ports {
 	position:relative;
-	top:-20px;
+	top:-5px;
 	margin-left:200px;
 	width:79%;
 	background-color:white;
@@ -201,6 +213,7 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
 	cursor: pointer;
+	margin-bottom:20px;
 }
 input[type=submit]:hover {
     background-color: black;
